2008-06-09  Andreas Kupries  <akupries@shaw.ca>

	* generic/tclIORTrans.c (ReflectInput): Fixed a bug triggered by
	Pat Thoyts <patthoyts@users.sourceforge.net>. Reset the EOF flag
	after draining the Tcl level into the result buffer, to make sure
	that the result buffer will be drained as well by repeated calls
	to ReflectInput should it contain more than one buffer-full of
	data. Without that reset the higher I/O system will not call on
	ReflectInput anymore due to the assumed EOF, thus losing the data
	which did not fit in the buffer of the call which caused the eof
	and drain.

2008-06-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOCall.c (TclOOGetSortedMethodList): Plug memory leak
	that occurred when all methods were hidden. [Bug 1987817]

2008-06-08  Miguel Sofer  <msofer@users.sf.net>
	* generic/tclBasic.c:      Compilation of uplevel scripts, allow
	* generic/tclCompCmds.c:   non-body compiled scripts to access the
	* generic/tclCompile.c:    LVT (but not to extend it) and enable the
	* generic/tclCompile.h:    canonical list opt to sidestep the
	* generic/tclExecute.c:    compiler. This is [Patch 1973096]
	* generic/tclProc.c:
	* tests/uplevel.test:

2008-06-06  Andreas Kupries  <andreask@activestate.com>

	TIP #230 IMPLEMENTATION

	* generic/tclIOCmd.c: Integration of transform commands into 'chan'
			      ensemble.
	* generic/tclInt.h: Definitions of the transform commands.
	* generic/tclIORTrans.c: Implementation of the reflection transforms.
	* tests/chan.test:  Tests updated for new sub-commands of 'chan'.
	* tests/ioCmd.test: Tests updated for new sub-commands of 'chan'.
	* tests/ioTrans.test: Whole new set of tests for the reflection
			      transform.
	* unix/Makefile.in: Integration of new files into build rules.
	* win/Makefile.in:  Integration of new files into build rules.
	* win/makefile.vc:  Integration of new files into build rules.

	NOTE: The file 'tclIORTrans.c' has a lot of code in common with the